--- a/GCNav/EmptyCollectionControl.xaml
+++ b/GCNav/EmptyCollectionControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             Background="#FF64907B"
+             Background="#B0CAB8"
              Height="105" Width="585"
              MaxHeight="105" MaxWidth="585"
              d:DesignHeight="300" d:DesignWidth="300">
@@ -12,8 +12,8 @@
     <UserControl.Resources>
         <Style TargetType="Button" x:Key="browse">
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="Blue"/>
-            <Setter Property="Background" Value="#FFB5FBE3"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="#227174"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -32,7 +32,7 @@
 
 
                         </ControlTemplate.Triggers>
-                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="DarkGreen" BorderThickness="2">
+                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="#227174" BorderThickness="2">
                             <ContentPresenter 
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
@@ -80,8 +80,8 @@
 
     <Grid>
         <Canvas >
-            <Rectangle x:Name="middle_background" Fill="#FFFDF3E2" Height="51" Stroke="#FFF3F3CE" Width="570" Canvas.Top="10" Canvas.Left="8"/>
-            <Button Style="{StaticResource browse}"  Content="OK" Canvas.Left="252" HorizontalContentAlignment="Center" Canvas.Top="64" Width="76" Height="30" Foreground="Black" Margin="1" BorderBrush="#FF076F72" BorderThickness="10"  Click="OK_Click" MinHeight="0" MinWidth="0" />
+            <Rectangle x:Name="middle_background" Fill="White" Height="51" Width="570" Canvas.Top="10" Canvas.Left="8"/>
+            <Button Style="{StaticResource browse}"  Content="OK" Canvas.Left="252" HorizontalContentAlignment="Center" Canvas.Top="64" Width="76" Height="30" Margin="1" BorderThickness="10"  Click="OK_Click" MinHeight="0" MinWidth="0" />
             <TextBox x:Name="message" Height="51" Width="570" Text="The collection is currently empty. &#x0a; Please populate it using the content authoring tool." Canvas.Left="7" Canvas.Top="9" Foreground="Black" Background="Transparent" FontSize="15" MinHeight="0" MinWidth="0" IsReadOnly ="true" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextWrapping="Wrap"/>
         </Canvas>
     </Grid>
