--- a/GCNav/Navigator.xaml
+++ b/GCNav/Navigator.xaml
@@ -10,7 +10,7 @@
     
       <Grid >
 
-        <Grid Name="curImageContainer" HorizontalAlignment="Right" VerticalAlignment="Top"> <!-- jcchin - HorizontalAlignment temporarily changed from Right to Center so I can open Artwork Mode in 1280 x 800 resolution -->
+        <Grid Name="curImageContainer" HorizontalAlignment="Right" VerticalAlignment="Top">
             <Border Name="imageBorder" CornerRadius="5" Padding="10"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
                 <Grid Name="curImageCanvas1" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Canvas Name="curImageCanvas" >
@@ -20,10 +20,9 @@
             </Border>
         </Grid>
         <Grid Name="filterBoxContainer" HorizontalAlignment="Center" VerticalAlignment="Top" Height="540" Width="330" Visibility="Hidden">
-            <!--jmond: Changed visibility to hidden for now since it will be moved and the event info will be displayed there instead -->
-            <!--<Border Name="filterBorder" CornerRadius="5" Padding="0" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10" Background = "#FF5D9D8E" BorderBrush="#FF002D0C" BorderThickness="4,4,4,0">
-               --> <m:FilterTimelineBox x:Name="timelineFilt" Padding="0,0,0,0" Visibility="Hidden"/>
-            <!--</Border>-->
+          
+            <m:FilterTimelineBox x:Name="timelineFilt" Padding="0,0,0,0" Visibility="Hidden"/>
+            
         </Grid>
         <Grid Name="eventInfoContainer" HorizontalAlignment="Left" VerticalAlignment="Top" Height="500" Visibility="Hidden">
             <Border CornerRadius="5" Padding="5" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10" Background = "#FFA7C99F" BorderBrush="#FF002D0C" BorderThickness="4,4,4,4">
@@ -54,10 +53,9 @@
                         <TextBlock Name="medium" Grid.Row="3" Grid.Column="0" Text=""  Foreground="Black" TextAlignment="Left" FontSize="20" Margin="5,0,0,0"/>
                         <Rectangle Name="KeywordBack" Grid.Row="4" Grid.RowSpan="2" Grid.Column="0" Fill ="#44000000" Margin="-10,0,0,0"/>
                         <TextBlock  Name="KeywordsTitle" Grid.Row="4" Grid.Column="0" Visibility="Hidden" Text="Keywords:" Foreground="White" TextAlignment="Center" FontSize="18" Margin="5,0,0,0"></TextBlock>
-                        <!--<Rectangle Name="curKeywordsBack" Canvas.Top="135" Fill ="#44000000"/>-->
-                    <!--<s:SurfaceScrollViewer x:Name="keywordscroll" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Grid.Row="5" Grid.Column="0">-->
+                    
                         <TextBlock  Name="curKeywords" Text=""  Visibility="Hidden"  Foreground="White"  TextAlignment="Left" FontSize="18" Margin="5,10,0,0" Grid.Row="5" Grid.Column="0"></TextBlock>
-                    <!--</s:SurfaceScrollViewer>-->
+                   
                 </Grid>
              </s:SurfaceScrollViewer>
             </Border>
@@ -79,26 +77,13 @@
         <Grid Name="ButtonPanel" HorizontalAlignment="Right" VerticalAlignment="Top">
             <s:SurfaceButton Name="exitButton" Content="QUIT" Visibility ="Collapsed" Background="Red" Opacity=".5" Width="48" Height="30" MinHeight="0" Padding="0 2 0 0" Canvas.Right="20" Canvas.Bottom="20"  Click="ExitButton_Click" Canvas.ZIndex="100" HorizontalContentAlignment="Center"/>
         </Grid>
-        <!--<Border Name="instructionBorder" BorderBrush="#ccd6c1" Visibility ="Visible" BorderThickness="4" CornerRadius="4" Canvas.Bottom="10" Canvas.Left="50" Width="300" Height="40" Canvas.ZIndex="100" VerticalAlignment="Bottom">
-        <Canvas Visibility="Visible" Background="#ccd6c1" Name="instructionBox" HorizontalAlignment="Center" >
-            <TextBlock Name="instruction" Text="Select Artwork to Show Details" Foreground="Black" HorizontalAlignment="Center" TextAlignment="Center" FontSize="15"></TextBlock>
-        </Canvas>
-        </Border>-->
+       
         <Grid Name="InstructionBox" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width ="500" Visibility="Collapsed" Opacity=".75" IsHitTestVisible="False">
             <Border Name ="InstructionBorder" CornerRadius="5" Width ="500" Padding="2,2,2,2"  HorizontalAlignment="center" VerticalAlignment="center" Margin="10" Background = "#ccd6c1" BorderBrush="#ccd6c1" BorderThickness="4">
-                <!--<Grid>-->
-                    <!--<Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="20"/>
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>-->
+              
 
                     <TextBlock Name="infoBox" Visibility ="Visible" Text="Select Artwork to View Details" Foreground="Black" TextAlignment="Center" FontSize="15" Width="500"></TextBlock>
 
-                <!--</Grid>-->
             </Border>
 
         </Grid>
