--- a/trunk/GCNav/Navigator.xaml
+++ b/trunk/GCNav/Navigator.xaml
@@ -11,12 +11,15 @@
       <Grid >
 
         <Grid Name="curImageContainer" HorizontalAlignment="Right" VerticalAlignment="Top">
-            <Border Name="imageBorder" CornerRadius="5" Padding="10"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
+            <Border Name="imageBorder" Grid.Row="0" CornerRadius="5" Padding="10"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
                 <Grid Name="curImageCanvas1" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Canvas Name="curImageCanvas" >
                         
                     </Canvas>
                 </Grid>
+            </Border>
+            <Border Name ="InfoBorder" Opacity="0.75" Padding="2,2,2,2"  HorizontalAlignment="center" VerticalAlignment="Bottom" Margin="20,0,0,-35" Background = "#ccd6c1" BorderBrush="#ccd6c1" BorderThickness="4">
+                <TextBlock Text="Tap Image to View Artwork in Detail" Height="25"  Foreground="Black" TextAlignment="Center" FontSize="15" VerticalAlignment="Bottom"/>
             </Border>
         </Grid>
         <Grid Name="filterBoxContainer" HorizontalAlignment="Center" VerticalAlignment="Top" Height="540" Width="330" Visibility="Hidden">
