--- a/GCNav/Navigator.xaml
+++ b/GCNav/Navigator.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" xmlns:my="http://schemas.microsoft.com/surface/2008">
     
-      <Grid >
+      <Grid Name="MainGrid">
 
         <Grid Name="curImageContainer" HorizontalAlignment="Right" VerticalAlignment="Top">
             <Border Name="imageBorder" Grid.Row="0" CornerRadius="5" Padding="10"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
@@ -68,9 +68,9 @@
 
             <!--The catalog-->
         <my:ScatterView Height="100" HorizontalAlignment="Left" Name="mainScatterView" VerticalAlignment="Top" Width="192" Background="#FFA7C99F">
-            <my:ScatterViewItem Height="50" Width="2300" HorizontalAlignment="Left" Name="mainScatterViewItem" VerticalAlignment="Top" CanRotate="False" MouseWheel="mainScatterViewItem_MouseWheel" SizeChanged="mainScatterViewItem_SizeChanged" ShowsActivationEffects="True" IsHitTestVisible="True" Opacity="1">
+            <my:ScatterViewItem Height="50" Width="2300" HorizontalAlignment="Left" Name="mainScatterViewItem" VerticalAlignment="Top" CanRotate="False" MouseWheel="mainScatterViewItem_MouseWheel" SizeChanged="mainScatterViewItem_SizeChanged" ShowsActivationEffects="True" IsHitTestVisible="True" Opacity="1" >
                 <Canvas Width="{Binding ElementName=mainScatterViewItem, Path=ActualWidth}" Height="{Binding ElementName=mainScatterViewItem, Path=ActualHeight}">
-                    <Rectangle Name="_background" Fill="#FFA7C99F" Width="{Binding ElementName=mainScatterViewItem, Path=ActualWidth}" Height="{Binding ElementName=mainScatterViewItem, Path=ActualHeight}"/>
+                    <Rectangle Name="_background" Fill="LemonChiffon" Width="{Binding ElementName=mainScatterViewItem, Path=ActualWidth}" Height="{Binding ElementName=mainScatterViewItem, Path=ActualHeight}"/>
                     <Canvas Name="MainCanvas" />
                 </Canvas>
             </my:ScatterViewItem>
