--- a/LADSArtworkMode/ArtworkModeWindow.xaml
+++ b/LADSArtworkMode/ArtworkModeWindow.xaml
@@ -83,11 +83,11 @@
                 </Grid>
             </Grid>
             <DockPanel DockPanel.Dock="Right">
-                <Canvas Name="collapseBar" Width="1536" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Visibility="Visible" ZIndex="20">
-                    <Canvas Name="collapseButtonDown" Visibility="Visible" DockPanel.Dock="Top"  Height="30">
+                <Canvas Name="collapseBar" Width="1536" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Visibility="Visible" ZIndex="20" IsHitTestVisible="True" MouseDown="BottomButtonClick">
+                    <Canvas Name="collapseButtonDown" Visibility="Visible" DockPanel.Dock="Top" Height="30" >
                         <s:SurfaceButton  Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="450" VerticalAlignment="Center" HorizontalContentAlignment="Center" Click="BottomButtonClick" >
                             <StackPanel>
-                                <Polygon Name="down" HorizontalAlignment="Center" Points="0,0 22,0 11,16" Fill="Black" Margin="0,3,0,0" />
+                                <Polygon Name="down" HorizontalAlignment="Center" Points="0,0 22,0 11,16" Fill="White" Margin="0,3,0,0" />
                                
                             </StackPanel>
 
@@ -96,7 +96,7 @@
                     <Canvas  DockPanel.Dock="Top"  Height="30" Name="collapseButtonUp"  Visibility="Hidden"  >
                             <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="450" VerticalAlignment="Center" HorizontalContentAlignment="Center" Click="BottomButtonClick" >
                                 <StackPanel>
-                                    <Polygon Name="up" HorizontalAlignment="Center" Points="0,22 22,22 11,0" Fill="Black"/>
+                                    <Polygon Name="up" HorizontalAlignment="Center" Points="0,22 22,22 11,0" Fill="White"/>
 
                                 </StackPanel>
 
@@ -156,21 +156,21 @@
 
         <DockPanel Name="LeftPanel" Opacity=".9" Canvas.Top="0" Canvas.Left="0" Height="864" Width="384" Background="#618276" Canvas.ZIndex="99">
 
-            <s:SurfaceButton VerticalAlignment="Stretch" HorizontalAlignment="Right" Width="30" Background="#5a675f" Click="LeftButtonClick" DockPanel.Dock="Right">
-                <Canvas  Height="30"   >
+            <s:SurfaceButton Name="leftButton" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="30" Background="#5a675f" Click="LeftButtonClick" DockPanel.Dock="Right">
+                <Canvas>
                     <Canvas Name="collapseButtonRight" Visibility="Hidden"  >
-                        <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0" Canvas.Top="250">
+                        <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0">
                             <StackPanel>
-                                <Polygon HorizontalAlignment="Center" Points="0,0 0,20 20,10" Fill="Black"/>
+                                <Polygon HorizontalAlignment="Center" Points="0,0 0,20 20,10" Fill="#7FFFFFFF"/>
 
                             </StackPanel>
 
                         </s:SurfaceButton>
                     </Canvas>
                     <Canvas Name="collapseButtonLeft" Visibility="Visible"  >
-                        <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0" Canvas.Top="250">
+                        <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0">
                             <StackPanel>
-                                <Polygon HorizontalAlignment="Center" Points="20,0 20,20 0,10" Fill="Black"/>
+                                <Polygon HorizontalAlignment="Center" Points="20,0 20,20 0,10" Fill="#7FFFFFFF"/>
 
                             </StackPanel>
 
