--- a/LADSArtworkMode/ArtworkModeWindow.xaml
+++ b/LADSArtworkMode/ArtworkModeWindow.xaml
@@ -61,7 +61,9 @@
                     </Canvas.RenderTransform>
                 </Canvas>
 
-                <s:ScatterView Name="MSIScatterView" Width="1920" Height="1080"></s:ScatterView>
+                <s:ScatterView Name="MSIScatterView" Width="1920" Height="1080">
+                    <s:ScatterView Name="MainScatterView" Height="1080" Width="1920" Canvas.ZIndex="100"></s:ScatterView>
+                </s:ScatterView>
             </Grid>
         </Canvas>
 
@@ -462,8 +464,9 @@
 
             </StackPanel>
         </DockPanel>
-
-        <s:ScatterView Name="MainScatterView" Height="1080" Width="1920" Canvas.ZIndex="100"></s:ScatterView>
+        <Image Name="help" Source="Resources/question.png" MouseDown="help_MouseDown" TouchDown="help_TouchDown" Height="35" Width="35" Canvas.Right="140" Canvas.Top="40"/>
+        <s:SurfaceButton Name="helpDone" MinHeight="0" Height="30" Width="55" Content="Done" FontSize="14" Canvas.Right="60" Canvas.Top="40" Visibility="Hidden" Click="helpDone_Click" />
+        <Label Name="helpInstruction" Content="Click the Catalog button to go back to the catalog, click Tour Authoring start to make a new tour" Canvas.Right="8" Canvas.Top="66" MaxWidth="160" FontSize="14" Visibility="Hidden"/>
         <s:SurfaceButton Name="switchToCatalogButton" Content="Catalog" Height="30" MinHeight="0" Padding="7 2 7 0" Canvas.Right="214"  Click="switchToCatalogButton_Click" Canvas.ZIndex="100"/>
         <!-- switch to artwork selection mode -->
         <!--s:SurfaceButton Name="activateKW" Content="Knowledge Web"  Height="30" MinHeight="0" Padding="7 2 7 0" Canvas.Right ="367" Canvas.ZIndex="100" Visibility="Collapsed" /-->
